docs-kits_versioned_docs/version-24.12/kits/business-partner-kit/adoption-view.md
---
id: adoption-view
title: Adoption View
description: 'Business Partner Kit'
sidebar_position: 2
---

![Business partner kit banner](/img/kit-icons/bp-kit-icon.svg)

## Business Partner KIT

**Unique business partner data sets for the whole data space.**

## Vision & Mission

**Basis for the integration of value-adding services in the area of business partner data management.**

The BusinessPartner Kit provides high-quality data records of business partners called golden record including a unique identifier and the business partner number (BPN). The BPN provides a standardized and unique identifier on legal entity, site and address level. The connected backend service removes duplicate data, adds missing information, and improves data quality from different data sources so-called sharing member.

- **Legal Entity Level (BPN L)**: Search for a legal entity and get the high-quality data set.
- **Site Level (BPN S)**: Get the site information of a legal entity. A legal entity can have one or more sites.
- **Address Level (BPN A)**: Each legal entity and site has an address to find the company.

**The Kit provides a homogeneous semantic with an open data model, enables the access to high quality data and provides one access point to the business partner data sets.**
<br/>

![BuildApps](@site/static/img/BPKITBuildApps.png)

## Business Value

**One open data model**
Application and service providers reduce investments to integrate due to one data model / API specification and open interface. The pool API enables the integration and offering of value-added services and innovation based on high-quality master data.

**Access to new market potentials**
Potential to scale customer group and access new market potentials via Catena-X marketplace and shared service network. The BP Kit enables an interoperable foundation for value-added services.

**The unique identifier**
BPN is the unique number to identify and find partners in the Catena-X network. It will also provide high quality data sets from business partners, their legal unit, sites and addresses.

**The industry’s largest golden record collection**
as a shared and cost-optimized service (quality tested by the biggest players).

---
<br/>

## Use Case

**Status Quo**
**Todays challenge for automotive companies**

Most of today’s automotive companies have to invest a significant amount of resources to keep their individual partner master data updated and correct, since outdated or incorrect data records result in federal fines and wrong claims / billing processes. The industry spends a vast amount into an area that is non differentiating, regulated and executed redundantly across the partners.

For this, cutting individual company costs by offering the golden master data record as a shared service is the mission. And proactively reduce Business Partner risk via collaborative value-add services.
More insights to the business partner data management use case here: [Catena-X | Business Partner Use Case](https://catena-x.net/en/offers-standards/bpdm)

This will become the industry’s largest golden record collection as a shared and cost-optimized service (quality tested by the biggest players).

OEMs and small-medium enterprises:

- Reduce today’s individual investments in master data management
- Re-allocate freed-up resources to differentiating / critical tasks
- Time to value within 6 months, due to standard interfaces and mapping tools (e.g. SAP)
- Increase data quality and use industry collective wisdom to act pro-actively (e.g. fraud alerts)

Solution Provider:

- Reduce investments to integrate due to one Data Model and open interface.
- The Kit enables the offering of value-add services and innovation based on golden record and collective wisdom.
- Potential to scale customer group and access new market potentials via marketplace and shared service network.

## Standards

The standards for release 3.2 will be published soon.
Our relevant standards can be downloaded from the official [Catena-X Standard Library](https://catena-x.net/de/standard-library):

- Business Partner Number (Version 2.0.0)

- Business Partner Pool API (Version 2.0.0)

- Business Partner Gate API (Version 2.0.0)

## NOTICE

This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode).

- SPDX-License-Identifier: CC-BY-4.0
- SPDX-FileCopyrightText: 2023,2024 ZF Friedrichshafen AG
- SPDX-FileCopyrightText: 2023,2024 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
- SPDX-FileCopyrightText: 2023,2024 SAP SE
- SPDX-FileCopyrightText: 2023,2024 Volkswagen AG
- SPDX-FileCopyrightText: 2023,2024 Robert Bosch GmbH
- SPDX-FileCopyrightText: 2023,2024 Mercedes Benz Group
- SPDX-FileCopyrightText: 2023,2024 BASF SE
- SPDX-FileCopyrightText: 2023,2024 Schaeffler AG
- SPDX-FileCopyrightText: 2023,2024 Contributors to the Eclipse Foundation
- Source URL: [https://github.com/eclipse-tractusx/bpdm](https://github.com/eclipse-tractusx/bpdm)
